# shazam-for-movies

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: Dockerfile  README.md  main.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CLIENT.md  IDEATION.md  RESEARCH.md  SETUP.md
engine/: audio_fingerprint.py  config.py  db.py  indexer.py  matcher.py  visual_fingerprint.py
mobile/: .env.example  .gitignore  README.md  app.config.ts  app.json  package.json
mobile/src/app/: _layout.tsx  index.tsx  result.tsx
mobile/src/components/: scan-ring.tsx
mobile/src/lib/: api.ts  config.ts
